--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-yfinance==0.2.11
-pandas==1.5.3
-numpy==1.24.1
-matplotlib==3.7.1
-streamlit==1.17.0
-scikit-learn==1.2.0
-keras==2.12.0
-plotly==5.11.0
+yfinance
+pandas
+numpy
+matplotlib
+streamlit
+scikit-learn
+keras
+plotly
 tensorflow
